--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -2,7 +2,8 @@
 	"parser": "babel-eslint",
 	"env": {
 		"node": true,
-		"browser": true
+		"browser": true,
+		"mocha": true
 	},
 	"ecmaFeatures": {
 		"arrowFunctions": true,
