--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "client/app.js",
   "private": true,
   "scripts": {
+    "test": "karma start karma.config.js",
     "dev-server": "webpack-dev-server --config webpack-dev-server.config.js --progress --colors --port 2992 --inline",
     "hot-dev-server": "webpack-dev-server --config webpack-hot-dev-server.config.js --hot --progress --colors --port 2992 --inline",
     "build": "webpack --config webpack-production.config.js --progress --profile --colors"
@@ -51,6 +52,17 @@
     "webpack-dev-server": "^1.4.7"
   },
   "devDependencies": {
+    "expect": "^1.13.0",
+    "karma": "^0.13.15",
+    "karma-chrome-launcher": "^0.2.1",
+    "karma-cli": "^0.1.1",
+    "karma-mocha": "^0.2.1",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-phantomjs-shim": "^1.1.2",
+    "karma-spec-reporter": "0.0.23",
+    "karma-webpack": "^1.7.0",
+    "mocha": "^2.3.4",
+    "phantomjs": "^1.9.19",
     "redux-devtools": "^2.1.5"
   }
 }
