--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-redux": "^4.0.0",
     "react-router": "^0.13.2",
     "redux": "^3.0.4",
+    "redux-thunk": "^1.0.2",
     "sass-loader": "0.5.0",
     "style-loader": "^0.12.0",
     "superagent": "^1.1.0",
