--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "extract-text-webpack-plugin": "^0.8.0",
     "fetch-polyfill": "^0.8.1",
     "file-loader": "^0.8.1",
+    "history": "^1.17.0",
     "html-loader": "^0.3.0",
     "less": "^2.1.2",
     "less-loader": "^2.0.0",
@@ -45,7 +46,7 @@
     "react-lazy-load": "^1.0.4",
     "react-proxy-loader": "^0.3.1",
     "react-redux": "^4.0.0",
-    "react-router": "^0.13.2",
+    "react-router": "^1.0.3",
     "redux": "^3.0.4",
     "redux-thunk": "^1.0.2",
     "sass-loader": "0.5.0",
