--- a/package.json
+++ b/package.json
@@ -24,17 +24,21 @@
   "license": "MIT",
   "dependencies": {
     "async": "^1.2.0",
-    "babel-core": "^5.0.12",
-    "babel-eslint": "^4.1.5",
-    "babel-loader": "^5.0.0",
+    "babel-core": "^6.4.5",
+    "babel-eslint": "^4.1.6",
+    "babel-loader": "^6.2.1",
+    "babel-plugin-react-transform": "^2.0.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
     "basscss-sass": "^1.0.2",
     "body-parser": "^1.14.2",
     "cookie-parser": "^1.4.0",
     "css-loader": "^0.14.0",
     "es6-promise": "^3.0.2",
-    "eslint": "^0.23.0",
-    "eslint-loader": "^0.14.0",
-    "eslint-plugin-react": "~2.5.0",
+    "eslint": "^1.10.3",
+    "eslint-loader": "^1.2.0",
+    "eslint-plugin-react": "^3.16.1",
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^0.8.0",
     "fetch-polyfill": "^0.8.1",
@@ -48,11 +52,12 @@
     "null-loader": "^0.1.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
-    "react-hot-loader": "^1.0.0",
+    "react-hot-loader": "^1.3.0",
     "react-lazy-load": "^1.0.4",
     "react-proxy-loader": "^0.3.1",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.3",
+    "react-transform-hmr": "^1.0.1",
     "redux": "^3.0.4",
     "redux-thunk": "^1.0.2",
     "sass-loader": "0.5.0",
