--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev-server": "nodemon ./server/index.js",
     "start-dev": "npm run hot & npm run dev-server && fg",
     "start-prod": "NODE_ENV=prod node ./server/index.js",
-    "start": "npm run build && npm run start-prod"
+    "start": "npm run build && npm run start-prod",
+    "lint": "eslint -c .eslintrc --fix ./server/**/*.js"
   },
   "keywords": [
     "webpack",
@@ -36,7 +37,7 @@
     "cookie-parser": "^1.4.0",
     "css-loader": "^0.14.0",
     "es6-promise": "^3.0.2",
-    "eslint": "^1.10.3",
+    "eslint": "^2.2.0",
     "eslint-loader": "^1.2.0",
     "eslint-plugin-react": "^3.16.1",
     "express": "^4.13.3",
