--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "test-watch": "karma start karma.config.js --no-single-run --auto-watch",
     "hot": "webpack-dev-server --config webpack-hot-dev-server.config.js --hot --progress --colors --port 2992 --inline",
     "build": "webpack --config webpack-production.config.js --progress --profile --colors",
-    "dev-server": "nodemon ./server/index.js",
+    "dev-server": "NODE_ENV=dev nodemon ./server/index.js",
     "start-dev": "npm run hot & npm run dev-server && fg",
-    "start-prod": "NODE_ENV=prod node ./server/index.js",
+    "start-prod": "NODE_ENV=production node ./server/index.js",
     "start": "npm run build && npm run start-prod",
     "lint": "eslint -c .eslintrc --fix ./server/**/*.js"
   },
@@ -46,6 +46,7 @@
     "file-loader": "^0.8.1",
     "history": "^1.17.0",
     "html-loader": "^0.3.0",
+    "html-webpack-plugin": "^2.9.0",
     "less": "^2.1.2",
     "less-loader": "^2.0.0",
     "lodash": "^3.9.3",
@@ -60,6 +61,7 @@
     "react-transform-hmr": "^1.0.1",
     "redux": "^3.0.4",
     "redux-thunk": "^1.0.2",
+    "request": "^2.69.0",
     "sass-loader": "0.5.0",
     "style-loader": "^0.12.0",
     "superagent": "^1.1.0",
