Added server side tests.

--- a/.eslintrc
+++ b/.eslintrc
@@ -7,13 +7,13 @@
   "env": {
     "browser": true,
     "node": true,
-    "es6": true
+    "es6": true,
+    "mocha": true
   },
   "globals": {},
   "rules": {
     "strict": 0,
     "eol-last": 0,
-    "keyword-spacing": 2,
     "space-before-function-paren": [
         2,
         {"anonymous": "always", "named": "never"}
@@ -26,6 +26,7 @@
     "brace-style": [2, "stroustrup", { "allowSingleLine": true }],
     "space-before-blocks": [2, "always"],
     "space-in-parens": [2, "never"],
+    "keyword-spacing": [2, {"before": true, "after": true, "overrides": {}}],
     "no-nested-ternary": 2,
     "no-multiple-empty-lines": 2,
     "no-mixed-spaces-and-tabs": 2,
