--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -24,7 +24,8 @@
 	},
 	"rules": {
 		"react/jsx-boolean-value": 2,
-		"react/jsx-quotes": 2,
+		"react/jsx-quotes": 0,
+		"jsx-quotes": [2, "prefer-double"],
 		"react/jsx-no-undef": 2,
 		"react/jsx-sort-props": 0,
 		"react/jsx-sort-prop-types": 0,
