--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start-dev": "npm run hot & npm run dev-server && fg",
     "start-prod": "NODE_ENV=production node ./server/index.js",
     "start": "npm run build && npm run start-prod",
-    "lint": "eslint -c .eslintrc --fix ./server"
+    "lint": "eslint -c .eslintrc --fix ./server",
+    "dockerize": "npm run build && docker build -t react-webpack/website ."
   },
   "keywords": [
     "webpack",
@@ -24,6 +25,13 @@
   "author": "Nazar Matviyiv",
   "license": "MIT",
   "dependencies": {
+    "lodash": "^3.9.3",
+    "express": "^4.13.3",
+    "body-parser": "^1.14.2",
+    "cookie-parser": "^1.4.0",
+    "request": "^2.69.0"
+  },
+  "devDependencies": {
     "async": "^1.5.2",
     "babel-core": "^6.5.0",
     "babel-eslint": "^4.1.6",
@@ -33,14 +41,11 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.3.13",
     "basscss-sass": "^1.0.2",
-    "body-parser": "^1.14.2",
-    "cookie-parser": "^1.4.0",
     "css-loader": "^0.14.0",
     "es6-promise": "^3.0.2",
     "eslint": "^2.2.0",
     "eslint-loader": "^1.2.0",
     "eslint-plugin-react": "^3.16.1",
-    "express": "^4.13.3",
     "extract-text-webpack-plugin": "^0.8.0",
     "fetch-polyfill": "^0.8.1",
     "file-loader": "^0.8.1",
@@ -49,7 +54,6 @@
     "html-webpack-plugin": "^2.9.0",
     "less": "^2.1.2",
     "less-loader": "^2.0.0",
-    "lodash": "^3.9.3",
     "node-sass": "3.3.3",
     "null-loader": "^0.1.0",
     "react": "^0.14.3",
@@ -61,15 +65,12 @@
     "react-transform-hmr": "^1.0.1",
     "redux": "^3.0.4",
     "redux-thunk": "^1.0.2",
-    "request": "^2.69.0",
     "sass-loader": "0.5.0",
     "style-loader": "^0.12.0",
     "superagent": "^1.1.0",
     "url-loader": "^0.5.5",
     "webpack": "^1.8.5",
-    "webpack-dev-server": "^1.4.7"
-  },
-  "devDependencies": {
+    "webpack-dev-server": "^1.4.7",
     "bluebird": "^3.0.5",
     "expect": "^1.13.0",
     "ghooks": "^0.3.2",
