--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "test-watch": "karma start karma.config.js --no-single-run --auto-watch",
     "hot": "webpack-dev-server --config webpack-hot-dev-server.config.js --hot --progress --colors --port 2992 --inline",
     "build": "webpack --config webpack-production.config.js --progress --profile --colors",
+    "build-dev": "webpack --config webpack-dev-server.config.js --progress --profile --colors",
     "dev-server": "NODE_ENV=dev nodemon ./server/index.js",
-    "start-dev": "npm run hot & npm run dev-server && fg",
-    "start-prod": "NODE_ENV=production node ./server/index.js",
-    "start": "npm run build && npm run start-prod",
+    "dev": "npm run hot & npm run dev-server && fg",
+    "prod": "NODE_ENV=production node ./server/index.js",
+    "start": "npm run build && npm run prod",
     "lint": "eslint -c .eslintrc --fix ./server",
     "dockerize": "npm run build && docker build -t react-webpack/website ."
   },
@@ -25,10 +26,12 @@
   "author": "Nazar Matviyiv",
   "license": "MIT",
   "dependencies": {
-    "lodash": "^3.9.3",
-    "express": "^4.13.3",
     "body-parser": "^1.14.2",
     "cookie-parser": "^1.4.0",
+    "estraverse": "^4.2.0",
+    "estraverse-fb": "^1.3.1",
+    "express": "^4.13.3",
+    "lodash": "^3.9.3",
     "request": "^2.69.0"
   },
   "devDependencies": {
