--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,11 @@
 {
-  "ecmaFeatures": {
-    "jsx": true,
-    "module": true,
-    "modules": true
+  parserOptions: {
+    "sourceType": "module",
+    "ecmaFeatures": {
+        "jsx": true,
+        "module": true,
+        "modules": true
+    }
   },
   "env": {
     "browser": true,
